bin_PROGRAMS=image_surface pdf_surface ps_surface svg_surface toy_text user_font
image_surface_SOURCES=image_surface.cpp 

image_surface_CPPFLAGS=$(CAIROMM_CFLAGS)
image_surface_LDADD=$(CAIROMM_LIBS)

pdf_surface_SOURCES=pdf_surface.cpp
pdf_surface_CPPFLAGS=$(CAIROMM_CFLAGS)
pdf_surface_LDADD=$(CAIROMM_LIBS)

ps_surface_SOURCES=ps_surface.cpp
ps_surface_CPPFLAGS=$(CAIROMM_CFLAGS)
ps_surface_LDADD=$(CAIROMM_LIBS)

svg_surface_SOURCES=svg_surface.cpp
svg_surface_CPPFLAGS=$(CAIROMM_CFLAGS)
svg_surface_LDADD=$(CAIROMM_LIBS)

toy_text_SOURCES=toy_text.cpp
toy_text_CPPFLAGS=$(CAIROMM_CFLAGS)
toy_text_LDADD=$(CAIROMM_LIBS)

user_font_SOURCES=user_font.cpp
user_font_CPPFLAGS=$(CAIROMM_CFLAGS)
user_font_LDADD=$(CAIROMM_LIBS)